# flytepane

./: .gitingnore  Dockerfile  README.md  in_container.mk  pyproject.toml  sandbox.config
_pb_output/: 0_datapane.datapane.publish_report_1.pb  1_datapane.datapane.transform_data_1.pb  2_datapane.datapane.datapane_workflow_2.pb  4_datapane.datapane.datapane_workflow_3.pb
datapane/: datapane.py
faaspane/: faaspane.yml  go.mod  go.sum
faaspane/faaspane/: handler.go
