[tool.poetry]
name = "flytepane"
version = "1.0.0"
description = "Example of running workflow in flyte and publish report on datpane"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flytekit = "^0.15.4"
pandas = "^1.2.2"
altair = "^4.1.0"
datapane = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
